--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					<span>Trúc Ngân</span>
 				</h2>
 				<h2 class="content__title no-select">
-					<span class="content__title-sub">Chúc em 8/3 và cả sau này nữa luôn luôn cười, vui vẻ và an 
+					<span class="content__title-sub">Chúc E 8/3 và cả sau này nữa luôn luôn cười, vui vẻ và an 
 						nhiên</span>
 				</h2>
 			</div>
